Fixing (some) tests.